# 3121B_StrugariuDianaAndreea_ProiectPoo

./: .gitignore  CMakeLists.txt  CinemaBookingSystem.sln  CinemaBookingSystem.vcxproj  DOCUMENTATIE.md  Makefile  README.md  conturi.txt  data_Bilet_2005_R5L7_1779199804.txt  data_Bilet_2105_R3L6_1779199006.txt  gitignore
.github/workflows/: build.yml
CinemaBookingSystem/: Cinema.h  CinemaBookingSystem.vcxproj  CinemaBookingSystem.vcxproj.filters  CinemaModels.h  Platform.h  UI.h  filme.txt  istoric_Diana.txt  main.cpp  toate_rezervarile.txt
data/: conturi.txt  filme.txt  istoric_Diana.txt  toate_rezervarile.txt
include/: Cinema.h  CinemaModels.h  config.h  mainwindow.h
src/: main.cpp  main_console.cpp  mainwindow_builders.cpp  mainwindow_slots.cpp  moc_mainwindow.cpp
tests/: test_main.cpp
